--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="col m6 hide-on-small-only">
           <div class="img-content">
             <h3>Facial Recognition App</h3>
-            Loads an image and produces a greyscale version to allow detection of faces and draws an outline. Image processing using Python's OpenCV module
+            Script that allows you to load an image and produce a greyscale version for effective face detection. Counts faces, draws a visible outline around detected faces and allows for creation of new image files based on cropping original images . Image processing uses Python's OpenCV module.
           </div>
         </div>
       </div>
@@ -318,7 +318,7 @@
   <div id="app2" class="modal">
     <div class="modal-content">
       <h4>Facial Recognition App</h4>
-      <img src="img/facerec.jpg" alt="" class="responsive-img">            Loads an image and produces a greyscale version to allow detection of faces and draws an outline. Image processing using Python's OpenCV module
+      <img src="img/facerec.jpg" alt="" class="responsive-img">            Script that allows you to load an image and produce a greyscale version for effective face detection. Counts faces, draws a visible outline around detected faces and allows for creation of new image files based on cropping original images . Image processing uses Python's OpenCV module.
     </div>
     <div class="modal-footer">
       <p>
