--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="img-content">
             <h3>Calculator</h3>
             Desktop application of a full functioning calculator with basic
-            arithmetic capabilites as well as scientific calculations available
+            arithmetic capabilites as well as scientific calculations available.
           </div>
         </div>
       </div>
@@ -347,7 +347,7 @@
     <div class="modal-content">
       <h4>Calculator</h4>
       <img src="img/calculatorexample.gif" alt="" class="responsive-img"> Desktop application of a full functioning calculator with basic
-      arithmetic capabilites as well as scientific calculations available
+      arithmetic capabilites as well as scientific calculations available.
     </div>
     <div class="modal-footer">
       <p>
