updated baseball pointer

--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
     <div class="container">
 
 
-            <div class="row title-row">
-              <div class="col m12 hide-on-small-only"><h2>Github Activity</h2></div>
-            </div>
       <!-- Row for Github activity -->
-      <div class="row git-row">
+      <div class="row section-title">
         <div class="col m12 hide-on-small-only">
+          <h2>Github Activity</h2>
+        </div>
+        <!-- <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a> -->
+      </div>
 
-          <!-- <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a> -->
-
-          <br>
+      <div class="row">
+        <div class="col m12 hide-on-small-only">
           <div class="calendar">
             <!-- Loading placeholder -->
             Loading user data.
@@ -117,10 +117,12 @@
         </div>
       </div>
 
-      <hr class="section-break">
+      <hr class="section-break hide-on-small-only">
 
-      <div class="row title-row">
-        <div class="col m12 hide-on-small-only"><h2>Projects</h2></div>
+      <div class="row section-title">
+        <div class="col m12">
+          <h2>Projects</h2>
+        </div>
       </div>
 
       <!-- Row 1 -->
@@ -170,7 +172,8 @@
         <div class="col m6 hide-on-small-only">
           <div class="img-content">
             <h3>Facial Recognition App</h3>
-            Script that allows you to load an image and produce a greyscale version for effective face detection. Counts faces, draws a visible outline around detected faces and allows for creation of new image files based on cropping original
+            Script that allows you to load an image and produce a greyscale version for effective face detection. Counts faces, draws
+             a visible outline around detected faces and allows for creation of new image files based on cropping original
             images . Image processing uses Python's OpenCV module.
           </div>
         </div>
@@ -368,7 +371,7 @@
     </div>
     <div class="modal-footer">
       <p>
-        <a href="http://www.github.com/kamclark/baseball">Github Link</a>
+        <a href="https://github.com/kamclark/BaseballSimulator">Github Link</a>
       </p>
     </div>
   </div>
