fixed links updated link references and touched up colors

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
           <div class="img-content">
             <h3>Cats</h3>
             Python based 2D obstacle avoidance game with scoring logic and collision and boundary detection and increasing difficulty.
+            <a href="https://github.com/kamclark/Cats">Github Link</a>
           </div>
         </div>
         <div class="col m6">
@@ -175,6 +176,7 @@
             Script that allows you to load an image and produce a greyscale version for effective face detection. Counts faces, draws
              a visible outline around detected faces and allows for creation of new image files based on cropping original
             images . Image processing uses Python's OpenCV module.
+            <a href="https://github.com/kamclark/FaceDetector">Github Link</a>
           </div>
         </div>
       </div>
@@ -188,6 +190,7 @@
             Desktop application simulating the outcome of a baseball
             player's plate appearance based off of most recent three year
             mean averages from MLB's statistical database and random number generation.
+            <a href="https://github.com/kamclark/BaseballSimulator">Github Link</a>
           </div>
         </div>
         <div class="col m6">
@@ -231,6 +234,7 @@
             <h3>Calculator</h3>
             Desktop application of a full functioning calculator with basic
             arithmetic capabilites as well as scientific calculations available.
+            <a href="https://github.com/kamclark/Calc">Github Link</a>
           </div>
         </div>
       </div>
@@ -242,6 +246,7 @@
             <h3>Marketplace App</h3>
             Online marketplace which allows users to explore items uploaded by other users and sort by category or seller.
             Seller accounts are allowed to add/delete/edit items in price and quantity as well as upload a photo.
+            <a href="https://github.com/kamclark/marketplaceGWU">Github Link</a>
           </div>
         </div>
         <div class="col m6">
@@ -287,6 +292,7 @@
             Able to browse by category and add/remove items to a cart.
             Administrative options available to add and delete items available
             in store database.
+            <a href="https://github.com/kamclark/SportsStore">Github Link</a>
 
           </div>
         </div>
@@ -294,50 +300,13 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="page-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Links</h5>
-          <p class="grey-text text-lighten-4">
-            <a href="http://www.github.com/kamclark"><img src="img/link-icons/github-logo.svg"></a>
-            <a href="http://www.linkedin.com/in/kamari-clark-491ab5b2"><img src="img/link-icons/linkedin-logo.svg"></a>
-            <a href="mailto:kamnmclark@gmail.com"><img src="img/link-icons/email-logo.svg"></a><br>
-            <a href="resume.pdf">Resume</a>
-        </div>
-
-        <!-- footer links -->
-        <!-- <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
-          <ul>
-            <li>
-              <a class="grey-text text-lighten-3" href="index.html">Home</a>
-            </li>
-            <li>
-              <a class="grey-text text-lighten-3" href="aboutme.html">About Me</a>
-            </li>
-            <li>
-              <a class="grey-text text-lighten-3" href="contact.html">Contact Me</a>
-            </li>
-
-          </ul>
-        </div> -->
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-        © 2019 by Kamari Clark
-        <a class="grey-text text-lighten-4 right" href="#!"></a>
-      </div>
-    </div>
-  </footer>
 
   <!-- Modal 1 -->
   <div id="app1" class="modal">
     <div class="modal-content">
       <h4>Cats Game</h4>
       <img src="img/cats.png" alt="" class="responsive-img">
+      <br>
       Python based 2D obstacle avoidance game with scoring logic and collision and boundary detection and increasing difficulty.
     </div>
     <div class="modal-footer">
@@ -351,7 +320,10 @@
   <div id="app2" class="modal">
     <div class="modal-content">
       <h4>Facial Recognition App</h4>
-      <img src="img/facerec.jpg" alt="" class="responsive-img"> Script that allows you to load an image and produce a greyscale version for effective face detection. Counts faces, draws a visible outline around detected faces and allows for creation
+      <img src="img/facerec.jpg" alt="" class="responsive-img">
+      <br>
+       Script that allows you to load an image and produce a greyscale version for effective face detection.
+       Counts faces, draws a visible outline around detected faces and allows for creation
       of new image files based on cropping original images . Image processing uses Python's OpenCV module.
     </div>
     <div class="modal-footer">
@@ -365,7 +337,9 @@
   <div id="app3" class="modal">
     <div class="modal-content">
       <h4>Baseball Simulator</h4>
-      <img src="img/baseballexample.gif" alt="" class="responsive-img"> Desktop application simulating the outcome of a baseball
+      <img src="img/baseballexample.gif" alt="" class="responsive-img">
+      <br>
+      Desktop application simulating the outcome of a baseball
       player's plate appearance based off of most recent three year
       mean averages from MLB's statistical database and random number generation.
     </div>
@@ -380,12 +354,15 @@
   <div id="app4" class="modal">
     <div class="modal-content">
       <h4>Calculator</h4>
-      <img src="img/calculatorexample.gif" alt="" class="responsive-img"> Desktop application of a full functioning calculator with basic
+      <br>
+      <img src="img/calculatorexample.gif" alt="" class="responsive-img">
+      <br>
+      Desktop application of a full functioning calculator with basic
       arithmetic capabilites as well as scientific calculations available.
     </div>
     <div class="modal-footer">
       <p>
-        <a href="http://www.github.com/kamclark/calculator">Github Link</a>
+        <a href="http://www.github.com/kamclark/Calc">Github Link</a>
       </p>
     </div>
   </div>
@@ -394,6 +371,7 @@
   <div id="app5" class="modal">
     <div class="modal-content">
       <h4>Marketplace</h4>
+      <br>
       <img src="img/marketplace.png" alt="" class="responsive-img"> Online marketplace which allows users to explore items uploaded by other users and sort by category or seller.
       Seller accounts are allowed to add/delete/edit items in price and quantity as well as upload a photo.
     </div>
@@ -408,6 +386,7 @@
   <div id="app6" class="modal">
     <div class="modal-content">
       <h4>Online Store</h4>
+      <br>
       <img src="img/storefrontexample.gif" alt="" class="responsive-img"> Web application simulating online storefront using MVC pattern.
       Able to browse by category and add/remove items to a cart.
       Administrative options available to add and delete items available
@@ -498,5 +477,45 @@
     })
   </script>
 </body>
+
+<!-- Footer -->
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Links</h5>
+        <p class="grey-text text-lighten-4">
+          <a href="http://www.github.com/kamclark"><img src="img/link-icons/github-logo.svg"></a>
+          <a href="http://www.linkedin.com/in/kamari-clark-491ab5b2"><img src="img/link-icons/linkedin-logo.svg"></a>
+          <a href="mailto:kamnmclark@gmail.com"><img src="img/link-icons/email-logo.svg"></a><br>
+          <a href="resume.pdf">Resume</a>
+      </div>
+
+      <!-- footer links -->
+      <!-- <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Links</h5>
+        <ul>
+          <li>
+            <a class="grey-text text-lighten-3" href="index.html">Home</a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3" href="aboutme.html">About Me</a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3" href="contact.html">Contact Me</a>
+          </li>
+
+        </ul>
+      </div> -->
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+      © 2019 by Kamari Clark
+      <a class="grey-text text-lighten-4 right" href="#!"></a>
+    </div>
+  </div>
+</footer>
+
 
 </html>
