--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
 
 
       <!-- Row for Github activity -->
-      <div class="row section-title">
+      <!--<div class="row section-title">
         <div class="col m12 hide-on-small-only">
           <h2>Github Activity</h2>
         </div>
-        <!-- <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a> -->
+        <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
       </div>
 
       <div class="row">
         <div class="col m12 hide-on-small-only">
           <div class="calendar">
-            <!-- Loading placeholder -->
+            // Loading placeholder
             Loading user data.
           </div>
         </div>
-      </div>
+      </div>  
 
-      <hr class="section-break hide-on-small-only">
+      <hr class="section-break hide-on-small-only"> -->
 
       <div class="row section-title">
         <div class="col m12">
