--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <h2 class="center">Kamari Clark</h2>
     <h4 class="center">Full Stack Developer</h4>
-    <h6 class="center">Employment Status: <span id="employment-status">Seeking</span></h4>
+    <h6 class="center">Employment Status: <span id="employment-status">Employed</span></h4>
   </header>
 
   <!-- Section: Main -->
