--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/kc-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Programming Page</title>
+    <title>kamari is an engineer</title>
   </head>
   <body>
     <div id="app"></div>
